# Videosense-build

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CORRECTNESS_HARDENING_REVIEW.md  Dockerfile  FINAL_STRUCTURE.md  Jenkinsfile-prod  Jenkinsfile-sandbox  MICRO_DRAMA_SEGMENTATION_PROPOSAL.md  README.md  REVIEW.md  ai_video.py  docker-compose.yml  entrypoint.sh  kafka.pem  main.py  main_local.py  newrelic.ini  pyproject.toml  real_test_results_20250627_141605.json  real_video_test.py  requirements.txt  sonar-project.properties  test_main.py
.github/workflows/: ci-check.yaml  dev-ci-cd.yaml  pr-merged-notification.yaml  pr-open-notification.yaml  qa-ci-cd.yaml
src/: .env  __init__.py  cli.py
src/actions/: __init__.py  clip_operations.py  clip_ranker.py  content_generator.py  edl_exporter.py  hashtag_normalizer.py  hook_scorer.py  moment_detector.py  platform_packager.py  summary_generator.py  teaser_exporter.py  teaser_selector.py  thumbnail_cropper.py  thumbnail_ranker.py  upload_preset.py
src/api/: __init__.py  router.py  schema.py
src/config/: .env  settings.py
src/context/: __init__.py  context_store.py  models.py
src/handlers/: kafka_handler.py
tests/: __init__.py  conftest.py  test_cli.py  test_clip_ranker.py  test_content_generator.py  test_context_store.py  test_edl_exporter.py  test_graphql.py  test_hashtag_normalizer.py  test_mock_ai_service.py  test_models.py  test_pipeline_v1_2.py  test_pipelines.py  test_platform_packager.py  test_teaser_selector.py  test_thumbnail_cropper.py  test_upload_preset.py  test_video_processor.py
(+34 files in other folders)
